<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data class=".fragments.DetailsFragmentBinding">
        <variable
            name="details"
            type="com.example.trainingapp.models.DataModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.DetailsFragment">


        <ImageView
            android:id="@+id/ivPosterFull"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="4dp"
            android:contentDescription="@string/full_image_poster"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.47" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.54" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.61" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.69" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.76" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.83" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.97" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center|start"
            android:padding="4dp"
            android:text="@string/txt_title"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/tvTitleContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="4dp"
            android:text="@{details.title}"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            tools:text="Bruce Almighty" />


        <TextView
            android:id="@+id/tvYear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center|start"
            android:padding="4dp"
            android:text="@string/txt_year"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <TextView
            android:id="@+id/tvYearContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="4dp"
            android:text="@{details.year}"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            tools:text="2003" />


        <TextView
            android:id="@+id/tvRated"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center|start"
            android:padding="4dp"
            android:text="@string/txt_rated"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/tvRatedContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="4dp"
            android:text="@{details.rated}"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            tools:text="PG-13" />


        <TextView
            android:id="@+id/tvReleased"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center|start"
            android:padding="4dp"
            android:text="@string/txt_released"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <TextView
            android:id="@+id/tvReleasedContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="4dp"
            android:text="@{details.released}"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            tools:text="23 May 2003" />


        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center|start"
            android:padding="4dp"
            android:text="@string/txt_runtime"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <TextView
            android:id="@+id/tvRuntimeContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="4dp"
            android:text="@{details.runtime}"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            tools:text="101 min" />


        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center|start"
            android:padding="4dp"
            android:text="@string/txt_genre"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

        <TextView
            android:id="@+id/tvGenreContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="4dp"
            android:text="@{details.genre}"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            tools:text="Comedy, Drama, Fantasy" />


        <TextView
            android:id="@+id/tvActors"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center|start"
            android:padding="4dp"
            android:text="@string/txt_actors"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <TextView
            android:id="@+id/tvActorsContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="4dp"
            android:text="@{details.actors}"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline11"
            tools:text="Jim Carrey, Morgan Freeman, Jennifer Aniston, Philip Baker Hall" />


        <TextView
            android:id="@+id/tvPlot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center|start"
            android:padding="4dp"
            android:text="@string/txt_plot"
            app:layout_constraintBottom_toTopOf="@+id/guideline13"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline12" />

        <TextView
            android:id="@+id/tvPlotContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="4dp"
            android:text="@{details.plot}"
            app:layout_constraintBottom_toTopOf="@+id/guideline13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline12"
            tools:text="A guy who complains about God too often is given almighty powers to teach him how difficult it is to run the world." />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

